--- a/index.html
+++ b/index.html
@@ -45,11 +45,18 @@ S<!DOCTYPE html>
       const responseEl = document.getElementById('response');
       responseEl.textContent = 'Submitting...';
 
-      const response = await fetch('https://script.google.com/macros/s/AKfycbw0SePsN4LBTKOTVL1k0WfzJZQQRWqBvsqROrp1i9HIhkJNi075Y7AB91wk0fMxu8-e/exec', {
-        method: 'POST',
-        body: JSON.stringify({ userId, status }),
-        headers: { 'Content-Type': 'application/json' }
-      });
+      // const response = await fetch('https://script.google.com/macros/s/AKfycbwTA_azboewzAtzUUeqwbWJUfSyTB0VNRGLUviJp7rgsrrD-ZKqQDrq_emCfVMLsqJA/exec', {
+      //  method: 'POST',
+      //  body: JSON.stringify({ userId, status }),
+      //  headers: { 'Content-Type': 'application/json' }
+     // });
+
+      fetch('https://script.google.com/macros/s/AKfycbwTA_azboewzAtzUUeqwbWJUfSyTB0VNRGLUviJp7rgsrrD-ZKqQDrq_emCfVMLsqJA/exec', {
+  method: 'POST',
+  headers: { 'Content-Type': 'application/json' },
+  body: JSON.stringify({ userId, status }),
+  mode: 'cors' // This is important
+})
 
       if (response.ok) {
         responseEl.textContent = 'Submitted successfully!';
