--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-S<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
   <title>Status Form</title>
@@ -9,15 +9,15 @@ S<!DOCTYPE html>
 
   <form id="statusForm">
     <label for="userId">Element ID:</label>
-    <input type="text" id="userId" name="userId"><br><br>
+    <input type="text" id="userId" name="userId" required><br><br>
 
     <label for="status">Status:</label>
     <select id="status" name="status" required>
       <option value="">-- Select Status --</option>
       <option value="Cut">Cut</option>
       <option value="Sub">Sub</option>
-       <option value="Frame">Frame</option>
-        <option value="Frame">Done</option>
+      <option value="Frame">Frame</option>
+      <option value="Done">Done</option>
     </select><br><br>
 
     <button type="submit">Submit</button>
@@ -26,42 +26,34 @@ S<!DOCTYPE html>
   <p id="response"></p>
 
   <script>
-    // Pre-fill user ID from URL parameter
+    // Pre-fill userId from ?id= query string
     window.onload = () => {
       const params = new URLSearchParams(window.location.search);
       const userId = params.get('id');
-      if (userId) {
-        document.getElementById('userId').value = userId;
-      }
+      if (userId) document.getElementById('userId').value = userId;
     };
 
-    // Submit data to Google Sheet
+    // Handle form submission
     document.getElementById('statusForm').addEventListener('submit', async function(e) {
       e.preventDefault();
 
       const userId = document.getElementById('userId').value;
       const status = document.getElementById('status').value;
-
       const responseEl = document.getElementById('response');
       responseEl.textContent = 'Submitting...';
 
-      // const response = await fetch('https://script.google.com/macros/s/AKfycbwTA_azboewzAtzUUeqwbWJUfSyTB0VNRGLUviJp7rgsrrD-ZKqQDrq_emCfVMLsqJA/exec', {
-      //  method: 'POST',
-      //  body: JSON.stringify({ userId, status }),
-      //  headers: { 'Content-Type': 'application/json' }
-     // });
-// https://script.google.com/macros/s/AKfycbw0SePsN4LBTKOTVL1k0WfzJZQQRWqBvsqROrp1i9HIhkJNi075Y7AB91wk0fMxu8-e/exec
- const response = await fetch('https://script.google.com/macros/s/AKfycbwTA_azboewzAtzUUeqwbWJUfSyTB0VNRGLUviJp7rgsrrD-ZKqQDrq_emCfVMLsqJA/exec', {
-  method: 'POST',
-  headers: { 'Content-Type': 'application/json' },
-  body: JSON.stringify({ userId, status }),
-  mode: 'cors' // This is important
-})
+      try {
+        const response = await fetch('https://script.google.com/macros/s/AKfycbyp1gt_jmXn48DaISQEF_cZwFBBOx3zKc1Sg1JpEMzYDdIVz0jyszcnNlK4dF1gnRey/exec', {
+          method: 'POST',
+          headers: { 'Content-Type': 'application/json' },
+          body: JSON.stringify({ userId, status }),
+          mode: 'cors'
+        });
 
-      if (response.ok) {
-        responseEl.textContent = 'Submitted successfully!';
-      } else {
-        responseEl.textContent = 'Failed to submit.';
+        const data = await response.json();
+        responseEl.textContent = data.success ? 'Submitted successfully!' : `Error: ${data.error}`;
+      } catch (err) {
+        responseEl.textContent = 'Failed to submit. ' + err.message;
       }
     });
   </script>
