--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
           body: JSON.stringify({ userId, status }),
-          mode: 'cors'
+          mode: 'no-cors'
         });
 
         const data = await response.json();
