--- a/Production Test.html
+++ b/Production Test.html
@@ -2,23 +2,58 @@
 <html>
 <head>
   <title>Status Form</title>
+  <meta charset="UTF-8">
+</head>
+<body>
+  <h2>Status Submission Form</h2>
 
-<form name="submit-to-google-sheet">
-  <input name="email" type="email" placeholder="Email" required>
-  <button type="submit">Send</button>
-</form>
+  <form id="statusForm">
+    <label for="userId">Element ID:</label>
+    <input type="text" id="userId" name="userId"><br><br>
 
-<script>
-  const scriptURL = 'https://script.google.com/macros/s/AKfycby3wX8WfJT3cGHc_ANim1m-SOYzRzEBoPBKP6uDm49Py2T7kiT2yarPYYkm7wvGdyWr/exec'
-  const form = document.forms['submit-to-google-sheet']
+    <label for="status">Status:</label>
+    <select id="status" name="status" required>
+      <option value="">-- Select Status --</option>
+      <option value="Cut">Cut</option>
+      <option value="Sub">Sub</option>
+       <option value="Frame">Frame</option>Add commentMore actions
+        <option value="Frame">Done</option>
+    </select><br><br>
 
-  form.addEventListener('submit', e => {
-    e.preventDefault()
-    fetch(scriptURL, { method: 'POST', body: new FormData(form)})
-      .then(response => console.log('Success!', response))
-      .catch(error => console.error('Error!', error.message))
-  })
-</script>
-  </script>
-</body>
-</html>
+    <button type="submit">Submit</button>
+  </form>
+
+  <p id="response"></p>
+
+  <script>
+    // Pre-fill user ID from URL parameter
+    window.onload = () => {
+      const params = new URLSearchParams(window.location.search);
+      const userId = params.get('id');
+      if (userId) {
+        document.getElementById('userId').value = userId;
+      }
+    };
+
+    // Submit data to Google Sheet
+    document.getElementById('statusForm').addEventListener('submit', async function(e) {
+      e.preventDefault();
+
+      const userId = document.getElementById('userId').value;
+      const status = document.getElementById('status').value;
+
+      const responseEl = document.getElementById('response');
+      responseEl.textContent = 'Submitting...';
+
+      const response = await fetch('https://script.google.com/macros/s/AKfycbw0SePsN4LBTKOTVL1k0WfzJZQQRWqBvsqROrp1i9HIhkJNi075Y7AB91wk0fMxu8-e/exec', {
+        method: 'POST',
+        body: JSON.stringify({ userId, status }),
+        headers: { 'Content-Type': 'application/json' }
+      });
+
+      if (response.ok) {
+        responseEl.textContent = 'Submitted successfully!';
+      } else {
+        responseEl.textContent = 'Failed to submit.';
+      }
+    });
