--- a/Production Test.html
+++ b/Production Test.html
@@ -26,7 +26,7 @@
   <p id="response"></p>
 
   <script>
-    // Pre-fill user ID from URL parameter
+    // Pre-fill user ID from URL paramete
     window.onload = () => {
       const params = new URLSearchParams(window.location.search);
       const userId = params.get('id');
